# nexus

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  TEMPLATE_DISCOVERY_IMPLEMENTATION.md  TEMPLATE_DISCOVERY_PROPOSAL.md  nexus_core_presentation.md  pyproject.toml
.agent/rules/: nexus.md
.claude/: settings.local.json
cases/: README.md  __init__.py  demo_runner.py
cases/default/: case.yaml
cases/default/data/: cleaned_data.csv  generated_data.csv  transformed_data.csv
cases/default/reports/: quality_report.json  validation_report.json
cases/demo/: __init__.py  case.yaml  pipeline.yaml  plugins.py
cases/demo/data/: 01_raw_data.csv  02_filtered.csv  03_aggregated.csv
cases/demo/reports/: validation.json
cases/hybrid-paths/: case.yaml
cases/multi-output/: case.yaml
cases/pipeline-flow/: case.yaml
cases/pipeline-flow/data/: 01_raw_data.csv  02_products.csv
cases/quickstart/: case.yaml
cases/quickstart/data/: synthetic_data.csv
cases/repro/: camera_calibration.yaml  case.yaml
config/: README.md  development.yaml  global.yaml  local.yaml.example  logging.yaml  setting-local-example.yaml  setting.yaml
docs/: README.md  api-reference.md  architecture.md  cli-reference.md  config-references.md  configuration-best-practices.md  configuration-examples.md  documentation-design.md  execution-flows.md  features.md  getting-started.md  path-resolution-convention.md  plugin-development.md  renderer-discovery-mechanism.md  renderer-import-flow.md  repro-renderer-refactoring.md  two-repros-clarification.md  unified-execution-units-design.md  user-guide.md
docs/api/: README.md
docs/api/handlers/: README.md  csv.md  data.md  json.md  parquet.md  pickle.md  pkl.md
docs/api/plugins/: README.md  data_generator.md  sample_data_generator.md
docs/archive/: README.md
docs/core/: overview.md
docs/guides/: writing-plugins.md  writing-renderers.md
docs/repro/: README.md
examples/: config_references_example.yaml  repro_renderer_demo.py  unified_execution_units_demo.py
scripts/: README.md  setup.py
src/demo/handlers/: __init__.py  handlers.py
src/demo/plugins/: __init__.py
src/nexus/: __init__.py  __main__.py  cli.py  cli_cases.py  cli_plugins.py  cli_templates.py  main.py
src/nexus/cli/: cases.py  main.py  plugins.py  templates.py  utils.py
src/nexus/contrib/: __init__.py
src/nexus/contrib/basic/: __init__.py  generation.py  handlers.py  processors.py
src/nexus/contrib/basic/logic/: __init__.py  processing.py
src/nexus/contrib/nexus/: __init__.py  basic.py  repro.py
src/nexus/contrib/repro/: QUICKSTART_OPTIMIZATION.md  README.md  __init__.py  camera_calibration.json  datagen.py  examples.py  matching.py  performance_optimization.md  rendering.py  types.py  utils.py  vehicle_renderer.py  video.py  video_benchmark.py  video_parallel.py
src/nexus/core/: case_manager.py  cli_helpers.py  config.py  config_processors.py  config_resolver.py  context.py  datahub.py  discovery.py  engine.py  execution_units.py  formatter.py  handlers.py  path_resolver.py  standard_runners.py  types.py
src/nexus/plugins/: generators.py  processors.py  validators.py
templates/: README.md  analytics.yaml  data-quality.yaml  default.yaml  etl-pipeline.yaml  quickstart.yaml  repro.yaml  repro_datagen.yaml
templates/basic/: demo.yaml  demo_legacy.yaml
templates/repro/: repro.yaml  repro_datagen.yaml
tests/: conftest.py  test_case_manager.py  test_cli.py  test_config.py  test_datahub.py  test_engine.py  test_handlers.py  test_integration.py  test_main.py  test_nexus_framework.py  test_plugins.py
workspace/cases/repro/: camera_calibration.json
(+14 files in other folders)
